# T12875-repro

./: Client.hs  Server.hs  run.sh
lib/: lib.cabal
lib/ALib/: Things.hs  Types.hs
