name:                lib
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     ALib.Things, ALib.Types
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
  -- hs-source-dirs:      
  default-language:    Haskell2010
